--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "@supabase/supabase-js": "2.44.4",
+    "@supabase/gotrue-js": "2.64.2",
+    "@supabase/auth-js": "2.3.2",
+    "@supabase/functions-js": "2.4.1",
+    "@supabase/postgrest-js": "1.15.5",
+    "@supabase/realtime-js": "2.10.0",
+    "@supabase/storage-js": "2.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
